<resources>
    <string name="app_name">Controle de Vendas</string>
    <string name="clientes">Clientes</string>
    <string name="novo_cliente">Novo cliente</string>
    <string name="registrar_cliente">Registrar cliente</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="registrar">Registrar</string>
    <string name="nomeList">Nome:</string>
    <string name="telefoneList">Telefone:</string>
    <string name="nomeExemplo">Cliente da Silva</string>
    <string name="telefoneExemplo">(034) 98848 9490</string>
    <string name="opcoesCliente">Opções do cliente</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="atualizar">Atualizar</string>
    <string name="meus_produtos">Meus produtos</string>
    <string name="novo_produto">Novo produto</string>
    <string name="produto_exemplo">Perfume Boticário</string>
    <string name="descricao_exemplo">75 ml / O Boticário</string>
    <string name="preco_exemplo">R$ 120,00</string>
    <string name="formato_preco">R$ %.2f</string>
    <string name="registrar_produto">Registrar produto</string>
    <string name="preco">Preço (R$)</string>
    <string name="descricao">Descrição</string>
    <string name="editar_produto">Editar produto</string>
    <string name="selecionar_foto">Selecionar foto</string>
    <string name="qtd_exemplo">0 unidades</string>
    <string name="registrar_entrada">Registrar entrada</string>
    <string name="quantidade_itens">Quantidade de itens</string>
    <string name="data_entrada">Data de entrada</string>
    <string name="custo_unidade">Custo por unidade</string>
    <string name="opcoes_produto">Opções do produto</string>
    <string name="registrar_venda">Registrar venda</string>
    <string name="selecione_cliente">Selecione um cliente ou continue:</string>
    <string name="criar_cliente">Criar novo cliente</string>
    <string name="continuar">Continuar</string>
    <string name="selecione_produtos">Selecione os produtos e quantidades:</string>
    <string name="retornar">Retornar</string>
    <string name="total">Total: </string>
    <string name="total_exemplo">R$ 0,00</string>
    <string name="informacoes_venda">Informações sobre a venda e pagamento:</string>
    <string name="data_venda">Data de venda</string>
    <string name="desconto">Aplicar desconto</string>
    <string name="confirmar_venda">Confirmar Venda</string>
    <string name="selecione_opcao">Selecione uma opção</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="status_pagamento">Status do pagamento</string>
    <string name="concluido">Concluído</string>
    <string name="parcialmente_pago">Parcialmente pago</string>
    <string name="totalmente_pendente">Totalmente pendente</string>
    <string name="meio_pagamento">Meio de pagamento</string>
    <string name="valor_pago">Valor pago (R$)</string>
    <string name="data_exemplo">30/11/2025</string>
    <string name="cliente">Cliente:</string>
    <string name="status_pagamento_lst">Status do pagamento:</string>
    <string name="data_venda_lst">Data de venda:</string>
    <string name="pendente">Pendente</string>
    <string name="forma_pagamento_lst">Forma de pagamento:</string>
    <string name="valor_total">Valor total:</string>
    <string name="valor_pendente">Valor pendente:</string>
    <string name="valor_exemplo">R$ 80,00</string>
    <string name="forma_exemplo">À prazo</string>
    <string name="listagem_pagamentos">Listagem de pagamentos</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="opcoes_pagamento">Opções de pagamento</string>
    <string name="adicionar_parcela">Adicionar parcela</string>
    <string name="data_recebimento">Data de recebimento</string>
    <string name="valor_recebido">Valor recebido (R$)</string>
</resources>