<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="cliente"
            type="com.example.controledevendas.features.cliente.data.Cliente" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray_F5F5F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewLabelDataVenda"
                style="@style/TextList"
                android:text="@string/nomeList"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewDataVenda"
                style="@style/TextList"
                android:text="@{cliente.nome}"
                tools:text="@string/nomeExemplo"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewLabelDataVenda"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelDataVenda"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewLabelCliente"
                style="@style/TextList"
                android:text="@string/telefoneList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDataVenda"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewCliente"
                style="@style/TextList"
                android:text="@{cliente.telefone}"
                tools:text="@string/telefoneExemplo"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewLabelCliente"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelCliente"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"/>

            <ImageButton
                android:id="@+id/buttonOptions"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/opcoesCliente"
                android:src="@drawable/icon_menu_element"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>