<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="java.text.NumberFormat" />
        <import type="java.util.Locale" />
        <variable
            name="produto"
            type="com.example.controledevendas.features.produto.data.Produto" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray_F5F5F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgViewProduto"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintWidth_percent="0.4"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgViewProduto"
                android:padding="16dp"
                app:layout_constraintWidth_percent="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDataVenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{produto.nome}"
                    tools:text="@string/produto_exemplo"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textViewDescricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{produto.descricao}"
                    tools:text="@string/descricao_exemplo"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textViewPreco"
                    android:text="@{NumberFormat.getCurrencyInstance(Locale.forLanguageTag(&quot;pt-BR&quot;)).format(produto.preco)}"
                    tools:text="@string/preco_exemplo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLabelDataVenda"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textViewQtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qtd_exemplo"
                    android:textSize="16sp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonOptions"
                android:layout_width="0dp"
                android:layout_height="20dp"
                app:layout_constraintWidth_percent="0.1"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/opcoes_produto"
                android:src="@drawable/icon_menu_element"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>