<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="java.text.NumberFormat" />
        <import type="java.util.Locale" />
        <variable
            name="produto"
            type="com.example.controledevendas.features.produto.data.Produto" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray_F5F5F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgViewProduto"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintWidth_percent="0.4"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgViewProduto"
                android:padding="16dp"
                app:layout_constraintWidth_percent="0.6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDataVenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{produto.nome}"
                    tools:text="@string/produto_exemplo"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textViewDescricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{produto.descricao}"
                    tools:text="@string/descricao_exemplo"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textViewPreco"
                    android:text="@{NumberFormat.getCurrencyInstance(Locale.forLanguageTag(&quot;pt-BR&quot;)).format(produto.preco)}"
                    tools:text="@string/preco_exemplo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLabelDataVenda"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textViewQtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qtd_exemplo"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="3dp">

                    <ImageButton
                        android:id="@+id/btnDecrease"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_subtraction"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/textViewUnidades"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="16dp" />

                    <ImageButton
                        android:id="@+id/btnIncrease"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_plus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>